# GaleMoE

./: .gitignore  OPTIMIZATIONS_APPLIED.md  OPTIMIZATION_SUMMARY.md  README.md  USAGE_GUIDE.md  analysis.ipynb  backprop.py  forward.py  forward_py.py  google_query.py  main.py  main2.py  pyproject.toml  results_project_out.json  router_statistics.py  sandbox.ipynb  sentence_embeddings.py  statistics.py  vllm.py
data/: genesis.csv  py_repos.csv
docs/: GATE_HOOK_VS_PROJECT_OUT.md
notebooks/: create_py_repos_dataset.ipynb  example.ipynb  router_subspace_ablation_plots.ipynb
paper/: alignment_experiment.tex
results/: router_statistics_layer16_expert7_w1.csv
results_1/: project_out_L0_k1-2-4-8-16-32-64-128-256-512_wikitext_n1000_s64_b100_vsvd-random-zero-shuffle_qnone_seed42.json  project_out_L1_k1-2-4-8-16-32-64-128-256-512_wikitext_n1000_s64_b100_vsvd-random-zero-shuffle_qnone_seed42.json  project_out_L2_k1-2-4-8-16-32-64-128-256-512_wikitext_n1000_s64_b100_vsvd-random-zero-shuffle_qnone_seed42.json  project_out_L3_k1-2-4-8-16-32-64-128-256-512_wikitext_n1000_s64_b100_vsvd-random-zero-shuffle_qnone_seed42.json  project_out_L4_k1-2-4-8-16-32-64-128-256-512_wikitext_n1000_s64_b100_vsvd-random-zero-shuffle_qnone_seed42.json  project_out_L5_k1-2-4-8-16-32-64-128-256-512_wikitext_n1000_s64_b100_vsvd-random-zero-shuffle_qnone_seed42.json
results_1002/: project_out_L28_k1-4-8-32-128-256-512_wikitext_n500_s64_b500_vsvd-replace-random-zero-shuffle_qnone_svdw3_scale10_seed42.json  project_out_L4_k1-4-8-32-128-256-512_wikitext_n500_s64_b500_vsvd-replace-random-zero-shuffle_qnone_svdw3_scale10_seed42.json  project_out_L8_k1-4-8-32-128-256-512_wikitext_n500_s64_b500_vsvd-replace-random-zero-shuffle_qnone_svdw3_scale10_seed42.json
results_hijack_multi_layers/: hijack_L16_Src5_k1-4-8_S3.0_wikitext_qnone.json  hijack_L20_Src5_k1-4-8_S3.0_wikitext_qnone.json
results_scale10/: project_out_L10_k1-2-4-8-16-32-64-128-256-512_wikitext_n500_s64_b500_vsvd-random-zero-shuffle_qnone_svdw3_scale10_seed42.json  (+13 more)
src/: main.py  model_loader.py  router_centroid_analysis.py  svd_decomposition.py  (+1 more)
(+149 files in other folders)
