[project]
name = "galemoe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "humanize>=4.14.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "ruff>=0.14.9",
    "scipy>=1.11.0",
    "safetensors>=0.7.0",
    "seaborn>=0.13.2",
    # Note: torch version - autoawq was tested with 2.6.0, but newer versions may work
    # If you encounter issues, try: pip install torch==2.6.0
    "torch>=2.6.0",
    # torchvision is optional and not needed for this analysis
    # Removed to avoid version conflicts with torch
    # Note: transformers version constrained for autoawq compatibility
    # autoawq requires transformers <= 4.51.3 (PytorchGELUTanh was removed in newer versions)
    "transformers>=4.45.0,<=4.51.3",
    "hf-transfer>=0.1.0",
    "datasets",
    "autoawq>=0.2.0",
    "scikit-learn"
]
